<resources>
    <string name="app_name">MVP Done</string>
    <string name="session_expired">Session Expired</string>
    <string name="splash">Splash</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_mobile">Need only 10 numbers</string>
    <string name="enter_password">Alpha numeric, 1 caps, 1 special character</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
